--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Crimson+Pro" />
   <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ecolens System -- 基于 React + Vite + AntD + Mobx 的 跨平台生态监测地图服务</title>
+  <title>Ecolens System -- 基于 React + Vite + OpenLayers 的 跨平台生态监测地图服务</title>
 </head>
 
 <body>
