modified:   index.html 	new file:   public/honeycomb-data.json 	new file:   src/components/tour.css 	modified:   src/components/tour.tsx 	modified:   src/pages/home/header.tsx 	modified:   src/pages/services/overview/area.tsx 	new file:   src/pages/services/overview/honeycomb-heat-map.tsx 	modified:   src/pages/services/overview/index.tsx 	modified:   src/pages/services/rs-imagery/rs-imagery.tsx 	modified:   src/pages/services/overview/honeycomb-heat-map.tsx

--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
+<!--
+ * @Author: LeonardoSya 2246866774@qq.com
+ * @Date: 2023-12-07 21:38:14
+ * @LastEditors: LeonardoSya 2246866774@qq.com
+ * @LastEditTime: 2023-12-31 15:00:53
+ * @FilePath: \vite-project\index.html
+ * @Description: 这是默认设置,请设置`customMade`, 打开koroFileHeader查看配置 进行设置: https://github.com/OBKoro1/koro1FileHeader/wiki/%E9%85%8D%E7%BD%AE
+-->
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -18,7 +27,6 @@
   <div id="root"></div>
   <!-- crossorigin="anonymous" 用于告诉浏览器以匿名身份加载脚本，有助于解决跨域问题 -->
   <script type="module" src="/src/main.tsx" crossorigin="anonymous"></script>
-
 </body>
 
 </html>
