--- a/index.html
+++ b/index.html
@@ -1,11 +1,3 @@
-<!--
- * @Author: LeonardoSya 2246866774@qq.com
- * @Date: 2023-12-07 21:38:14
- * @LastEditors: LeonardoSya 2246866774@qq.com
- * @LastEditTime: 2023-12-31 15:00:53
- * @FilePath: \vite-project\index.html
- * @Description: 这是默认设置,请设置`customMade`, 打开koroFileHeader查看配置 进行设置: https://github.com/OBKoro1/koro1FileHeader/wiki/%E9%85%8D%E7%BD%AE
--->
 <!doctype html>
 <html lang="en">
 
@@ -16,6 +8,7 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&family=Rubik+Bubbles&display=swap"
     rel="stylesheet" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Crimson+Pro" />
